module(
    name = "gperftools",
    version = "2.17.2",
    compatibility_level = 2,
)

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.16")

bazel_dep(name = "googletest", version = "1.17.0", dev_dependency = True)
